--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     </style>
 </head>
 <body>
-    <!-- <div id="product-list">
+    <div id="product-list">
 
-    </div> -->
+    </div>
 
     <div id="country" class="country"></div>
-    <!-- <script type="module" src="script.js"></script> -->
-    <script src="baitap.js"></script>
+    <script type="module" src="script.js"></script>
+    <!-- <script src="baitap.js"></script> -->
 </body>
 </html>
